<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RestaurantManager</string>
    <string name="action_settings">Settings</string>
    <string name="primi">Primi</string>
    <string name="secondi">Secondi</string>
    <string name="antipasti">Antipasti</string>
    <string name="dolci">Dolci</string>
    <string name="menu">MENU</string>
    <string name="title_activity_primi">Primi</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_secondi">Secondi</string>
    <string name="title_activity_antipasti">Antipasti</string>
    <string name="title_activity_dolci">Dolci</string>

</resources>
